--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "solution-starter-kit-disasters-2020-server",
+  "name": "solution-starter-kit-cooperation-2020-server",
   "version": "0.0.1",
-  "description": "Call for Code 2020 solution starter kit for natural disaster resiliency",
+  "description": "Call for Code 2020 solution starter kit for community collaboration",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,13 +12,13 @@
     "express": "^4.17.1",
     "ibm-watson": "^5.4.0"
   },
-  "homepage": "https://github.com/Call-for-Code/Solution-Starter-Kit-Disasters-2020#readme",
+  "homepage": "https://github.com/Call-for-Code/Solution-Starter-Kit-Cooperation-2020#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Call-for-Code/Solution-Starter-Kit-Disasters-2020.git"
+    "url": "git+https://github.com/Call-for-Code/Solution-Starter-Kit-Cooperation-2020.git"
   },
   "bugs": {
-    "url": "https://github.com/Call-for-Code/Solution-Starter-Kit-Disasters-2020/issues"
+    "url": "https://github.com/Call-for-Code/Solution-Starter-Kit-Cooperation-2020/issues"
   },
   "license": "Apache-2.0"
 }
