update idea, plus hooks for cloudant

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # Environment variables
 
-ASSISTANT_URL=https://gateway.watsonplatform.net/assistant/api/
+ASSISTANT_URL=https://api.eu-gb.assistant.watson.cloud.ibm.com
 ASSISTANT_ID=
 ASSISTANT_IAM_APIKEY=
+
+CLOUDANT_APP_ID=
+CLOUDANT_IAM_APIKEY=
