correct env variable for cloudant

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,5 @@ ASSISTANT_URL=https://api.eu-gb.assistant.watson.cloud.ibm.com
 ASSISTANT_ID=
 ASSISTANT_IAM_APIKEY=
 
-CLOUDANT_APP_ID=
+CLOUDANT_ID=
 CLOUDANT_IAM_APIKEY=
