--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,5 @@
 applications:
-- name: solution-starter-kit-cooperation-2020-server
+- name: Recycli-2020
   command: npm start
   path: .
   memory: 128M
