fixed bug and added security

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Environment variables
 
-ASSISTANT_URL=https://api.eu-gb.assistant.watson.cloud.ibm.com
+ASSISTANT_URL=
 ASSISTANT_ID=
 ASSISTANT_IAM_APIKEY=
 
@@ -8,7 +8,9 @@ CLOUDANT_ID=
 CLOUDANT_IAM_APIKEY=
 
 FB_VER_TOKEN=
+FB_PAGE_ACCESS_TOKEN=
 
+APP_API_KEY=
 
 VR_COLLECTION_ID=
 VR_URL=
